[project]
name = "balena-cpu"
version = "1.0.0"
description = "BALanced Execution through Natural Activation : a human-computer interaction methodology for code running."
readme = "README.md"
keywords = ["transformers", "speech-recognition", "text-extraction", "execution", "speech-to-text", "NLP", "sentence-similarity", "speech-to-function", "sentence-transformers", "wav2vec2"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[options]
packages = ["find:"]
install_requires = [
    "faiss-cpu",
    "numpy",
    "scipy",
    "sentence_transformers",
    "nltk",
    "pyaudio",
    "torch",
    "transformers"
]

[metadata]
name = "balena-cpu"
version = "1.0.0"
license = "Apache License 2.0"
author = "Louis Brulé Naudet"
author_email = "louisbrulenaudet@icloud.com"
description = "BALanced Execution through Natural Activation : a human-computer interaction methodology for code running."
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url = "https://github.com/louisbrulenaudet/balena"
homepage = "https://github.com/louisbrulenaudet/balena"
project_urls = {repository = "https://github.com/louisbrulenaudet/balena"}
keywords = "transformers, speech-recognition, text-extraction, execution, speech-to-text, NLP, sentence-similarity, speech-to-function, sentence-transformers, wav2vec2"